added admin to uml diagrams and added admin endpoints to video-service and user-service