@@ -5,19 +5,22 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import java.io.IOException;
+import java.util.List;
 import java.util.Set;
 import java.util.UUID;
-import java.util.Collections;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.util.StringUtils;
 import org.springframework.web.filter.OncePerRequestFilter;
+import org.vidrec.userservice.user.UserRole;
 
 @Component
 public class HeaderAuthFilter extends OncePerRequestFilter {
 
     private static final String HEADER = "X-User-Id";
+    private static final String ROLE_HEADER = "X-User-Role";
     private static final String AUTHORIZATION_HEADER = "Authorization";
     private static final String BEARER_PREFIX = "Bearer ";
     private static final Set<String> PUBLIC_PATHS = Set.of(
@@ -41,29 +44,30 @@ public class HeaderAuthFilter extends OncePerRequestFilter {
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
         throws ServletException, IOException {
-        String userId = extractUserId(request);
-        if (userId == null || userId.isBlank()) {
+        AuthContext authContext = extractAuthContext(request);
+        if (authContext == null || authContext.userId() == null || authContext.userId().isBlank()) {
             response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
             return;
         }
 
         UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
-            userId,
+            authContext.userId(),
             null,
-            Collections.emptyList()
+            List.of(new SimpleGrantedAuthority("ROLE_" + authContext.role().name()))
         );
         SecurityContextHolder.getContext().setAuthentication(auth);
         filterChain.doFilter(request, response);
     }
 
-    private String extractUserId(HttpServletRequest request) {
+    private AuthContext extractAuthContext(HttpServletRequest request) {
         String authorization = request.getHeader(AUTHORIZATION_HEADER);
         if (StringUtils.hasText(authorization) && authorization.startsWith(BEARER_PREFIX)) {
             String token = authorization.substring(BEARER_PREFIX.length()).trim();
             if (StringUtils.hasText(token)) {
                 try {
                     UUID userId = jwtUtil.extractUserId(token);
-                    return userId.toString();
+                    UserRole role = jwtUtil.extractRole(token);
+                    return new AuthContext(userId.toString(), role);
                 } catch (RuntimeException ignored) {
                     return null;
                 }
@@ -72,9 +76,20 @@ public class HeaderAuthFilter extends OncePerRequestFilter {
 
         String userIdHeader = request.getHeader(HEADER);
         if (StringUtils.hasText(userIdHeader)) {
-            return userIdHeader;
+            String roleHeader = request.getHeader(ROLE_HEADER);
+            UserRole role = UserRole.USER;
+            if (StringUtils.hasText(roleHeader)) {
+                try {
+                    role = UserRole.valueOf(roleHeader.trim().toUpperCase());
+                } catch (IllegalArgumentException ignored) {
+                    return null;
+                }
+            }
+            return new AuthContext(userIdHeader, role);
         }
 
         return null;
     }
+
+    private record AuthContext(String userId, UserRole role) {}
 }
